# support-triage-public

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.example.json
.claude/agents/: worker.md
.claude/commands/: run.md
.claude/skills/core-workflow/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: classifier.py  drafter.py  faithfulness.py  fixtures.py  kb.py  macros.py  main.py  providers.py  retrieval.py  schemas.py
eval_runs/: 2026-04-26-eval-summary.md
fixtures/synthetic/: tickets.jsonl  zendesk_export_sample.json
fixtures/synthetic/kb/: articles.jsonl
fixtures/synthetic/macros/: macros.jsonl
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  samples.ts  types.ts
scripts/: dev.py  eval_classifier.py  eval_drafting.py  eval_retrieval.py  generate_kb.py  generate_macros.py  generate_synthetic_fixtures.py  triage_zendesk_export.py
tests/: test_classifier.py  test_drafter.py  test_faithfulness.py  test_fixtures.py  test_main.py  test_providers.py  test_retrieval.py  test_zendesk_adapter.py
